--- a/pacific.css
+++ b/pacific.css
@@ -1,15 +1,21 @@
 body {
-    background-color: #eaeaea ; color:#666666; font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #90c7e3 ; color:#666666; font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+    background-image: linear-gradient(to bottom, #FFFFFF 20%, #90c7e3 60%, #FFFFFF 100%);
 }
 header {
     background-color: #1976d2; color:#FFFFFF; font-family: Georgia, 'Times New Roman', Times, serif;
     background-position: right;
     background-repeat: no-repeat;
-    height: 120px
+    padding: 1em;
 }
 header a{
     text-decoration: none;
 }
+#flow {
+    flex-direction: row;
+}
+
 header a:link{
     color: #FFFFFF;
 }
@@ -20,27 +26,26 @@ header a:hover{
     color: #90c7e3;
 }
 section{
-    float: left;
-    width: 33%;
     padding-left: 2em;
     padding-right: 2em;
 }
 h1 {
     text-align: center;
-    padding-top: .5em;
-    font-size: 3em;
+    font-size: 2em;
     letter-spacing: .25em;
 }
 nav {
-    position: fixed;
+    background-color: white;
+    text-align: center;
+    font-size: 1.2em;
+}
+nav li {
     padding-top: .5em;
     padding-bottom: .5em;
-    padding-right: .5em;
-    float: left;
-    width: 160px;
-    padding: 0;
-    font-size: 1.2em;
-    
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 12em;
+    border-bottom: none;
 }
 nav a:link{
     color: #5C7FA3;
@@ -53,7 +58,12 @@ nav a:hover {
 }
 nav ul{
     list-style-type: none;
-    padding-left: 1em;
+    padding-left: 10%;
+    margin: 0;
+    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-right: 10%;
 }
 
 h2 {
@@ -72,45 +82,41 @@ footer {
     font-size: small; font-size: .70em;
     padding: 1em;
     background-color: #FFFFFF;
-    margin-left: 170px;
 }
 
 #wrapper {
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
     background-color: #FFFFFF;
-    min-width: 960px;
-    max-width: 2048px;
-    box-shadow: 4px;
-    background-image: linear-gradient(to bottom, #FFFFFF, #90c7e3);
-
+    margin: auto;
+    width: 80%
 }
 h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 main {
-    padding-left: 2em;
-    padding-right: 2em;
-    background-color: #FFFFFF;
-    margin-left: 170px;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 #homehero {
     background-image: url("coast.jpg"); height: 300px;
-    background-size: 100% 100%;
-    margin-left: 170px;
+    background-size: 200% 100%;
 }
 #yurthero {
     background-image: url("yurt.jpg"); height: 300px;
-    background-size: 100% 100%;
-    margin-left: 170px;
+    background-size: 200% 100%;
 }
 #trailhero {
     background-image: url("trail.jpg"); height: 300px;
-    background-size: 100% 100%;
-    margin-left: 170px;
+    background-size: 200% 100%;
 }
 nav a {
     text-decoration: none;
 }
 * { box-sizing: border-box;}
+#mobile {
+    display: none;
+}
+#desktop {
+    display: inline;
+}
