--- a/pacific.css
+++ b/pacific.css
@@ -120,3 +120,27 @@ nav a {
 #desktop {
     display: inline;
 }
+table {
+    margin-left: auto;
+    margin-right: auto;
+    border-width: 1px;
+    border-color: #3399cc;
+    border-collapse: collapse;
+}
+th {
+    padding: 5px;
+    border-width: 1px;
+    border-color: #3399cc;
+}
+td {
+    text-align: center;
+    padding: 5px;
+    border-width: 1px;
+    border-color: #3399cc;
+}
+.text {
+    text-align: left;
+}
+table tr :nth-of-type(even) {
+    background-color: #DFEDF8;
+}
